Fix:  logo alignment

--- a/scss/modules/_layout.scss
+++ b/scss/modules/_layout.scss
@@ -1,33 +1,30 @@
-.logo svg {
-	height: auto;
-	width: 400px;
-}
-
-@media (width >= 991px) {
-	.logo svg {
-		height: 80px;
-		width: auto;
-	}
-
-	main {
-		display: grid;
-		grid-template-areas:
-			"heading heading"
-			"main	 aside";
-		grid-template-columns: 2fr 1fr;
-		gap: 1em;
-		align-items: baseline;
-	}
-}
-
 body,
 html {
 	margin: 0;
 }
 
 header {
-	text-align: center;
 	padding: 2rem 1rem;
+}
+
+.logo {
+	margin-left: auto;
+	margin-right: auto;
+	width: 200px;
+
+	svg {
+		height: auto;
+		width: 400px;
+	}
+
+	@media (width >= 991px) {
+		width: 250px;
+
+		svg {
+			height: 80px;
+			width: auto;
+		}
+	}
 }
 
 .lettermark-code,
@@ -45,6 +42,16 @@ main {
 	max-width: 80vw;
 	margin-left: auto;
 	margin-right: auto;
+
+	@media (width >= 991px) {
+		display: grid;
+		grid-template-areas:
+			"heading heading"
+			"main	 aside";
+		grid-template-columns: 2fr 1fr;
+		gap: 1em;
+		align-items: baseline;
+	}
 
 	p {
 		margin-top: 2rem;
